--- a/compexx-backend/src/main/resources/application.properties
+++ b/compexx-backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=compexx-backend
 
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:postgresql://localhost:5432/compexx
-spring.datasource.username=root
+spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 
